# blankmint.github.io

./: .gitignore  CNAME  Cargo.toml  README.md  deploy.sh  index-fallback.html  index-simple.html  index.html  simple.html  test.html
.github/workflows/: deploy.yml
pkg/: package.json  snake_game.d.ts  snake_game.js  snake_game_bg.wasm  snake_game_bg.wasm.d.ts
src/: lib.rs
